--- a/Dropdown/index.html
+++ b/Dropdown/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="bg-orange-100 h-screen w-full p-10" x-data="{open: false}">
-        <button class="bg-orange-500 h-10 w-44 self-center text-white justify-center align-center rounded-md"
+        <button class="bg-orange-500 mb-5 h-10 w-44 self-center text-white justify-center align-center rounded-sm"
             x-on:click="open = true">
             Toggle Dropdown
         </button>
