--- a/Autocomplete/index.html
+++ b/Autocomplete/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="//unpkg.com/alpinejs" defer></script>
+    <title>Filter Alpine JS</title>
 </head>
 
 <body>
@@ -17,7 +18,7 @@
         }
     }">
 
-            <h1 class="text-3xl font-bold">Search fruit you want</h1>
+            <h1 class="text-3xl font-bold">Search Fruit</h1>
             <div class="w-64">
                 <input class="border border-slate-300 rounded px-5 mt-5 h-9 w-full" x-model="search">
             </div>
