--- a/ImageSelection/index.html
+++ b/ImageSelection/index.html
@@ -10,9 +10,33 @@
 </head>
 
 <body class="text-gray-800 bg-gray-200">
-    <div class="container mx-auto p-4 m-4" x-data="{ tab: 'tab1' }">
+    <div class="container mx-auto p-4 m-4" x-data="{ image: 'image1' }">
         <!-- Title -->
         <h1 class="text-2xl font-bold">Image Selection</h1>
+        <div>
+            <img src="/src/img/1.jpg" x-show="image === 'image1'" alt="1">
+            <img src="/src/img/2.jpg" x-show="image === 'image2'" alt="2">
+            <img src="/src/img/3.jpg" x-show="image === 'image3'" alt="3">
+            <img src="/src/img/4.jpg" x-show="image === 'image4'" alt="4">
+            <img src="/src/img/5.jpg" x-show="image === 'image5'" alt="5">
+        </div>
+        <div class="flex item-center mt-2 gap-1">
+            <a class="border border-transparent hover:border-blue-500 w-16" href="#"
+                :class="{'border-blue-500 border-2' : image === 'image1'}" @click.prevent=" image= 'image1' "><img
+                    src="/src/img/1.jpg" alt="1"></a>
+            <a class="border border-transparent hover:border-blue-500 w-16" href="#"
+                :class="{'border-blue-500 border-2' : image === 'image2'}" @click.prevent=" image= 'image2' "><img
+                    src="/src/img/2.jpg" alt="2"></a>
+            <a class="border border-transparent hover:border-blue-500 w-16" href="#"
+                :class="{'border-blue-500 border-2' : image === 'image3'}" @click.prevent=" image= 'image3' "><img
+                    src="/src/img/3.jpg" alt="3"></a>
+            <a class="border border-transparent hover:border-blue-500 w-16" href="#"
+                :class="{'border-blue-500 border-2' : image === 'image4'}" @click.prevent=" image= 'image4' "><img
+                    src="/src/img/4.jpg" alt="4"></a>
+            <a class="border border-transparent hover:border-blue-500 w-16" href="#"
+                :class="{'border-blue-500 border-2' : image === 'image5'}" @click.prevent=" image= 'image5' "><img
+                    src="/src/img/5.jpg" alt="5"></a>
+        </div>
     </div>
 </body>
 
