--- a/Test/Modal/index.html
+++ b/Test/Modal/index.html
@@ -16,10 +16,10 @@
             <button class="bg-blue-700 text-white px-4 py-1 text-sm rounded" @click="isOpen=true">Open Modal</button>
             <div style="background-color: rgba(0, 0, 0, .5)"
                 class="mx-auto absolute top-0 left-0 w-full h-full flex items-center shadow-lg overflow-y-auto"
-                x-show="isOpen" x-transition:enter="transition ease-out duration-300"
-                x-transition:enter-start="opacity-0 scale-90" x-transition:enter-end="opacity-100 scale-100"
-                x-transition:leave="transition ease-in duration-300" x-transition:leave-start="opacity-100 scale-100"
-                x-transition:leave-end="opacity-0 scale-90">
+                x-show="isOpen" x-transition:enter="transition ease-out duration-100"
+                x-transition:enter-start="opacity-0" x-transition:enter-end="opacity-100"
+                x-transition:leave="transition ease-out duration-100" x-transition:leave-start="opacity-100"
+                x-transition:leave-end="opacity-0">
                 <div class="container mx-auto rounded p-4 mt-2 overflow-y-auto">
                     <div class="bg-white rounded p-8">
                         <h2 class="text-2xl font-bold mb-3">Modal Title</h2>
