--- a/index.html
+++ b/index.html
@@ -10,7 +10,45 @@
 </head>
 
 <body>
-
+    <div class="container w-full h-fit flex mx-auto px-4 xl:px-64 my-10">
+        <div class="w-1/3 h-full bg-blue-200 py-3 mr-5" x-data="{menu:'Dashboard'}">
+            <h1 class="text-2xl font-bold mb-5 px-5">Menu</h1>
+            <ul class="flex flex-col">
+                <!-- Dashboard -->
+                <li class="w-full"><a class="inline-block px-14 py-2 font-semibold hover:text-blue-800"
+                        :class="{'bg-orange-100 w-full text-blue-700': menu === 'Dashboard'}" href="#"
+                        @click.prevent="menu='Dashboard'">Dashboard</a></li>
+                <!-- Pesanan -->
+                <li class="w-full"><a class="inline-block px-14 py-2 font-semibold hover:text-blue-800"
+                        :class="{'bg-orange-100 w-full text-blue-700': menu === 'Pesanan'}" href="#"
+                        @click.prevent="menu='Pesanan'">Pesanan</a></li>
+                <!-- Keuangan -->
+                <li class="w-full"><a class="inline-block px-14 py-2 font-semibold hover:text-blue-800"
+                        :class="{'bg-orange-100 w-full text-blue-700': menu === 'Keuangan'}" href="#"
+                        @click.prevent="menu='Keuangan'">Keuangan</a></li>
+                <!-- Inventory -->
+                <li class="w-full"><a class="inline-block px-14 py-2 font-semibold hover:text-blue-800"
+                        :class="{'bg-orange-100 w-full text-blue-700': menu === 'Inventory'}" href="#"
+                        @click.prevent="menu='Inventory'">Inventory</a></li>
+                <!-- Pengaturan Akun -->
+                <li class="w-full"><a class="inline-block px-14 py-2 font-semibold hover:text-blue-800"
+                        :class="{'bg-orange-100 w-full text-blue-700': menu === 'PengaturanAkun'}" href="#"
+                        @click.prevent="menu='PengaturanAkun'">Pengaturan</a></li>
+            </ul>
+            <div>
+                <ul>
+                    <li x-show="menu === 'Dashboard'">Dashboard</li>
+                    <li x-show="menu === 'Pesanan'">Pesanan</li>
+                    <li x-show="menu === 'Keuangan'">Keuangan</li>
+                    <li x-show="menu === 'Inventory'">Inventory</li>
+                    <li x-show="menu === 'PengaturanAkun'">Pengaturan Akun</li>
+                </ul>
+            </div>
+        </div>
+        <div class="w-2/3 h-full bg-slate-500">
+            <h1>Hello World</h1>
+        </div>
+    </div>
 </body>
 
 </html>
