--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
             <h1 class="text-2xl font-bold mb-5 px-5">Menu</h1>
             <ul class="flex flex-col">
                 <!-- Dashboard -->
-                <li class="w-full"><a class="inline-block px-14 py-2 font-semibold hover:text-blue-800"
-                        :class="{'bg-orange-100 w-full text-blue-700': menu === 'Dashboard'}" href="#"
+                <li class="w-full"><a class="inline-block px-14 py-2 font-semibold hover:text-orange-300"
+                        :class="{'bg-orange-100 w-full text-orange-500': menu === 'Dashboard'}" href="#"
                         @click.prevent="menu='Dashboard'">Dashboard</a></li>
                 <!-- Pesanan -->
-                <li class="w-full"><a class="inline-block px-14 py-2 font-semibold hover:text-blue-800"
-                        :class="{'bg-orange-100 w-full text-blue-700': menu === 'Pesanan'}" href="#"
+                <li class="w-full"><a class="inline-block px-14 py-2 font-semibold hover:text-orange-300"
+                        :class="{'bg-orange-100 w-full text-orange-500': menu === 'Pesanan'}" href="#"
                         @click.prevent="menu='Pesanan'">Pesanan</a></li>
                 <!-- Keuangan -->
-                <li class="w-full"><a class="inline-block px-14 py-2 font-semibold hover:text-blue-800"
-                        :class="{'bg-orange-100 w-full text-blue-700': menu === 'Keuangan'}" href="#"
+                <li class="w-full"><a class="inline-block px-14 py-2 font-semibold hover:text-orange-300"
+                        :class="{'bg-orange-100 w-full text-orange-500': menu === 'Keuangan'}" href="#"
                         @click.prevent="menu='Keuangan'">Keuangan</a></li>
                 <!-- Inventory -->
-                <li class="w-full"><a class="inline-block px-14 py-2 font-semibold hover:text-blue-800"
-                        :class="{'bg-orange-100 w-full text-blue-700': menu === 'Inventory'}" href="#"
+                <li class="w-full"><a class="inline-block px-14 py-2 font-semibold hover:text-orange-300"
+                        :class="{'bg-orange-100 w-full text-orange-500': menu === 'Inventory'}" href="#"
                         @click.prevent="menu='Inventory'">Inventory</a></li>
                 <!-- Pengaturan Akun -->
-                <li class="w-full"><a class="inline-block px-14 py-2 font-semibold hover:text-blue-800"
-                        :class="{'bg-orange-100 w-full text-blue-700': menu === 'PengaturanAkun'}" href="#"
+                <li class="w-full"><a class="inline-block px-14 py-2 font-semibold hover:text-orange-300"
+                        :class="{'bg-orange-100 w-full text-orange-500': menu === 'PengaturanAkun'}" href="#"
                         @click.prevent="menu='PengaturanAkun'">Pengaturan</a></li>
             </ul>
             <div>
