--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         </div>
                         <!-- Atas -->
                         <!-- Bawah -->
-                        <div class="mx-5 text-center grid grid-cols-4 gap-2 divide-x-2">
+                        <div class="mx-5 pb-5 text-center grid grid-cols-4 gap-2 divide-x-2">
                             <div>
                                 <p>0</p>
                                 <p class="font-medium text-third">Menunggu Respon Pembayaran</p>
@@ -164,7 +164,7 @@
                     <h4 class="text-base text-third font-medium mb-5">Penjualan</h4>
                     <div class="w-full flex">
                         <div class="mr-5">
-                            <img class="w-[400px] h-[200px]" src="/dist/img/1.jpg" alt="chart">
+                            <img class="w-[400px] h-[200px]" alt="chart">
                         </div>
                         <div class="w-1/2 flex flex-wrap items-center gap-5">
                             <div class="w-1/2">
@@ -412,7 +412,7 @@
                         <input type="checkbox"
                             class="absolute top-0 inset-x-0 w-full h-12 opacity-0 z-10 cursor-pointer peer">
                         <div class="h-12 w-full flex items-center">
-                            <div class="self-center h-[1px] w-[650px] mr-5 bg-slate-800"></div>
+                            <div class="self-center h-[1px] w-[700px] mr-5 bg-slate-800"></div>
                             <p class="text-sm">Lihat rincian penghasilan</p>
                         </div>
                         <div
@@ -509,7 +509,6 @@
                 </div>
                 <!-- Bagian Kanan Pembayaran Pembeli -->
             </div>
-
         </div>
     </div>
 </body>
