--- a/index.html
+++ b/index.html
@@ -28,15 +28,35 @@
             <h1 class="text-2xl font-bold mb-5 px-5">Menu</h1>
             <ul class="flex flex-col">
                 <!-- Dashboard -->
-                <li class="w-full flex cursor-pointer items-center justify-between px-10 h-10"
+                <li class="w-full flex items-center cursor-pointer justify-between px-10 h-10"
                     :class="{'bg-orange-100 w-full text-orange-500': menu === 'Dashboard'}"
                     @click.prevent="menu='Dashboard'">
                     <span class="font-semibold">Dashboard</span>
                 </li>
                 <!-- Pesanan -->
+                <li class="w-full items-center cursor-pointer justify-between"
+                    @click.prevent="menu='Pesanan'" x-data="{ open: false }">
+                    <div class="flex justify-between px-10" x-on:click="open = ! open">
+                        <button class="font-semibold">Pesanan</button>
+                        <svg class="w-10 h-10 fill-current" viewBox=" 0 0
+                        64 64">
+                            <g transform="translate(237.000000, 335.000000)">
+                                <polyline class="st0" id="Fill-35"
+                                    points="-191.3,-296.9 -193.3,-294.9 -205,-306.6 -216.7,-294.9 -218.7,-296.9 -205,-310.6      -191.3,-296.9    " />
+                            </g>
+                        </svg>
+                    </div>
+                    <ul class="my-2 w-full" x-show="open">
+                        <li class="my-2 px-14" :class="{'bg-orange-100 w-full text-orange-500': menu === 'Pesanan'}">Pesanan Saya</li>
+                        <li class="my-2 px-14">Pembatalan</li>
+                        <li class="my-2 px-14">Pengembalian</li>
+                    </ul>
+                </li>
+                <!-- Keuangan -->
                 <li class="w-full flex cursor-pointer items-center justify-between px-10"
-                    @click.prevent="menu='Pesanan'">
-                    <span class="font-semibold">Pesanan</span>
+                    :class="{'bg-orange-100 w-full text-orange-500': menu === 'Keuangan'}"
+                    @click.prevent="menu='Keuangan'">
+                    <span class="font-semibold">Keuangan</span>
                     <svg class="w-10 h-10 fill-current" :class="{'bg-orange-100 w-full text-orange-500'}" viewBox=" 0 0
                         64 64">
                         <g transform="translate(237.000000, 335.000000)">
@@ -45,32 +65,6 @@
                         </g>
                     </svg>
                 </li>
-                <div x-show="menu === 'Pesanan'">
-                    <li class="my-2 px-14" :class="{'bg-orange-100 w-full text-orange-500': menu === 'Pesanan'}">Pesanan
-                        Saya</li>
-                    <li class="my-2 px-14">Pembatalan</li>
-                    <li class="my-2 px-14">Pengembalian</li>
-                </div>
-                <!-- Keuangan -->
-                <li class="w-full flex cursor-pointer items-center justify-between px-10"
-                    :class="{'bg-orange-100 w-full text-orange-500': menu === 'Keuangan'}"
-                    @click.prevent="menu='Keuangan'">
-                    <span class="font-semibold">Keuangan</span>
-                    <svg class="w-10 h-10 fill-current" :class="{'bg-orange-100 w-full text-orange-500'}"" viewBox=" 0 0
-                        64 64">
-                        <g transform="translate(237.000000, 335.000000)">
-                            <polyline class="st0" id="Fill-35"
-                                points="-191.3,-296.9 -193.3,-294.9 -205,-306.6 -216.7,-294.9 -218.7,-296.9 -205,-310.6      -191.3,-296.9    " />
-                        </g>
-                    </svg>
-                </li>
-                <div class="px-14" x-show="menu === 'Keuangan'">
-                    <li class="my-2">Saldo Saya</li>
-                    <li class="my-2">Rekening Bank</li>
-                    <li class="my-2">Tarik Saldo</li>
-                    <li class="my-2">Laporan</li>
-                    <li class="my-2">Pengaturan</li>
-                </div>
                 <!-- Inventory -->
                 <li class="w-full flex cursor-pointer items-center justify-between px-10"
                     :class="{'bg-orange-100 w-full text-orange-500': menu === 'Inventory'}"
@@ -187,8 +181,8 @@
                     </div>
                 </div>
                 <!-- Bagian Kanan Bawah -->
-                <!-- Dashboard -->
             </div>
+            <!-- Dashboard -->
             <!-- Pesanan -->
             <div x-show="menu === 'Pesanan'">
                 <!-- Menu -->
@@ -2103,9 +2097,11 @@
                     </div>
                 </div>
             </div>
+            <div x-show="menu === 'Keuangan'">Tab</div>
         </div>
         <!-- Menu -->
     </div>
+    
 </body>
 
 </html>
