--- a/index.html
+++ b/index.html
@@ -2905,7 +2905,7 @@
             <!-- Rekening Bank -->
             <!-- Tarik Saldo -->
             <div x-show="menu === 'Tarik'">
-                <!-- Bagian Kanan Atas -->
+                <!-- Bagian Atas -->
                 <div class="w-full h-fit rounded-lg bg-white shadow-lg px-5 mb-5">
                     <div class="flex flex-wrap font-bold text-2xl mb-2 justify-between mt-5">
                         <h1>Total Saldo</h1>
@@ -3145,7 +3145,7 @@
                                 <a class="py-2 px-10 rounded-l-md bg-white border"
                                     :class="{'text-orange-500 bg-orange-100': tab === 'penjualan'}" href="#"
                                     @click.prevent="tab = 'penjualan'">Penjualan</a>
-                                <a class="py-2 px-10 rounded-l-md bg-white border"
+                                <a class="py-2 px-10 rounded-r-md bg-white border"
                                     :class="{'text-orange-500 bg-orange-100': tab === 'penarikan'}" href="#"
                                     @click.prevent="tab = 'penarikan'">Penarikan</a>
                             </div>
