--- a/index.html
+++ b/index.html
@@ -3185,22 +3185,22 @@
                                 <div class="w-full mb-5">
                                     <ul class="flex justify-evenly">
                                         <li class="items-center">
-                                            <p class="font-semibold pl-5">Semua Pesanan</p>
+                                            <a class="font-semibold pl-5" href="#">Semua Pesanan</a>
                                         </li>
                                         <li class="items-center">
-                                            <p class="font-semibold pl-5">Pesanan Baru</p>
+                                            <a class="font-semibold pl-5" href="#">Pesanan Baru</a>
                                         </li>
                                         <li class="items-center">
-                                            <p class="font-semibold pl-5">Siap Dikirim</p>
+                                            <a class="font-semibold pl-5" href="#">Siap Dikirim</a>
                                         </li>
                                         <li class="items-center">
-                                            <p class="font-semibold pl-5">Dalam Pengiriman</p>
+                                            <a class="font-semibold pl-5" href="#">Dalam Pengiriman</a>
                                         </li>
                                         <li class="items-center">
-                                            <p class="font-semibold pl-5">Selesai</p>
+                                            <a class="font-semibold pl-5" href="#">Selesai</a>
                                         </li>
                                         <li class="items-center">
-                                            <p class="font-semibold pl-5">Dibatalkan</p>
+                                            <a class="font-semibold pl-5" href="#">Dibatalkan</a>
                                         </li>
                                     </ul>
                                     <div class="w-full relative my-5">
